--- a/css/storipress-landing.webflow.css
+++ b/css/storipress-landing.webflow.css
@@ -9264,7 +9264,7 @@ body {
     bottom: 0%;
     z-index: 999;
     height: 100vh;
-    padding-top: 2.5rem;
+    padding-top: 3rem;
     padding-right: 1.4rem;
     padding-left: 1.4rem;
     -webkit-box-orient: vertical;
@@ -9323,9 +9323,9 @@ body {
 
   .div-block-1475 {
     width: 100vw;
-    height: 100%;
+    height: 15rem;
     margin-left: -1.4rem;
-    padding-top: 1.5rem;
+    padding-top: 1rem;
     padding-right: 1rem;
     padding-left: 1rem;
     background-color: hsla(0, 0%, 100%, 0.85);
@@ -10688,6 +10688,7 @@ body {
 
   .div-block-1475 {
     z-index: 2000;
+    height: 10rem;
   }
 
   .div-block-1476 {
