--- a/css/storipress-landing.webflow.css
+++ b/css/storipress-landing.webflow.css
@@ -3000,14 +3000,8 @@ body {
   width: 49%;
   background-color: transparent;
   box-shadow: 1px 0 20px 0 rgba(0, 0, 0, 0.05);
-  -webkit-transition: box-shadow 200ms ease-in-out;
-  transition: box-shadow 200ms ease-in-out;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   color: #000;
-}
-
-.other-features-parent.comparisons:hover {
-  box-shadow: 5px 0 20px 5px rgba(0, 0, 0, 0.1);
 }
 
 .div-block-1397 {
@@ -7697,7 +7691,7 @@ body {
     position: -webkit-sticky;
     position: sticky;
     top: 0px;
-    height: 4rem;
+    height: 3.5rem;
     padding: 1rem 0.7rem 1rem 1.4rem;
     background-color: hsla(0, 0%, 92.7%, 0.5);
     box-shadow: none;
@@ -7715,7 +7709,6 @@ body {
     margin-left: 0px;
     padding-right: 2.3rem;
     padding-left: 2.3rem;
-    background-image: radial-gradient(circle closest-corner at 65% 125%, rgba(122, 84, 146, 0.9), hsla(0, 0%, 100%, 0)), linear-gradient(151deg, #5a837b, #627c88 46%, #878d64);
   }
 
   .footer-logo-image {
@@ -9264,7 +9257,7 @@ body {
     bottom: 0%;
     z-index: 999;
     height: 100vh;
-    padding-top: 3rem;
+    padding-top: 2.5rem;
     padding-right: 1.4rem;
     padding-left: 1.4rem;
     -webkit-box-orient: vertical;
@@ -9280,7 +9273,7 @@ body {
     -webkit-align-items: flex-start;
     -ms-flex-align: start;
     align-items: flex-start;
-    background-image: radial-gradient(circle farthest-corner at 35% 80%, rgba(122, 84, 146, 0.9), hsla(0, 0%, 100%, 0)), linear-gradient(151deg, #5a837b, #627c88 40%, #878d64);
+    background-color: #ececec;
   }
 
   .div-block-1474 {
@@ -9305,40 +9298,39 @@ body {
   }
 
   .text-block-70 {
-    margin-bottom: 1rem;
-    color: hsla(0, 0%, 100%, 0.85);
-    font-size: 1rem;
-    line-height: 100%;
+    margin-bottom: 0.5rem;
+    color: #333;
     font-weight: 600;
     text-decoration: none;
   }
 
   .link-7 {
-    margin-bottom: 1rem;
-    color: hsla(0, 0%, 100%, 0.75);
-    font-size: 0.85rem;
-    line-height: 100%;
+    margin-bottom: 0.5rem;
+    color: #333;
+    font-size: 1rem;
     text-decoration: none;
   }
 
   .div-block-1475 {
     width: 100vw;
-    height: 15rem;
+    height: 100%;
     margin-left: -1.4rem;
-    padding-top: 1rem;
+    padding-top: 2rem;
     padding-right: 1rem;
     padding-left: 1rem;
-    background-color: hsla(0, 0%, 100%, 0.85);
     box-shadow: 0 -1px 20px 5px rgba(0, 0, 0, 0.15);
   }
 
   .div-block-1476 {
     margin-bottom: 3rem;
-    color: #fff;
   }
 
   .div-block-1477 {
     display: none;
+  }
+
+  .div-block-1477.mainmenu {
+    height: 4rem;
   }
 
   .footer-reveal-spacer {
@@ -10682,13 +10674,8 @@ body {
     margin-top: 0rem;
   }
 
-  .link-7 {
-    color: hsla(0, 0%, 100%, 0.65);
-  }
-
   .div-block-1475 {
     z-index: 2000;
-    height: 10rem;
   }
 
   .div-block-1476 {
