--- a/css/storipress-landing.webflow.css
+++ b/css/storipress-landing.webflow.css
@@ -9263,10 +9263,6 @@ body {
     right: 0%;
     bottom: 0%;
     z-index: 999;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
     height: 100vh;
     padding-top: 2.5rem;
     padding-right: 1.4rem;
@@ -9488,6 +9484,7 @@ body {
 
   .hero-header.landing {
     font-size: 13vw;
+    line-height: 100%;
   }
 
   .div-block {
